crates/toml_edit/tests/fixtures/invalid/string/basic-out-of-range-unicode-escape-1.stderr
TOML parse error at line 1, column 8
  |
1 | a = "\UFFFFFFFF"
  |        ^
Invalid unicode 8-digit hex code
Value is out of range
